--- a/style.css
+++ b/style.css
@@ -6,10 +6,11 @@ body {
 }
 
 .screen {
-    background-color: grey;
+    background-color: rgba(128, 128, 128, 0.5);
     width: 230px;
     height: 50px;
     align-self: center;
+    text-align: end;
 }
 
 .cleardelete {
