--- a/style.css
+++ b/style.css
@@ -1,29 +1,84 @@
 body {
     display: flex;
     justify-content: center;
+    font-family: 'Pacifico', sans-serif;
+}
+
+
+
+.calculator {
+    display: flex;
     flex-direction: column;
     gap: 10px;
+    border-radius: 20px;
+    box-shadow: 0px 0px 15px;
+    padding: 20px;
+    backdrop-filter: blur(10px);
+    background-color: rgb(206, 206, 206);
 }
 
 .screen {
-    background-color: rgba(128, 128, 128, 0.5);
+    display: flex;
+    background-color: rgba(100, 100, 100, 0.5);
     width: 230px;
     height: 50px;
-    align-self: center;
-    text-align: end;
+    justify-content: center;
+    align-items: center;
+    border-style: solid;
+    border-radius: 10px;
+    border-color: white;
+    border-width: 2px;
+    font-size: 30px;
+}
+
+.previous {
+    display: flex;
+    height: 25px;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    border-radius: 20px;
+    background-color: rgb(241, 255, 215);
 }
 
 .cleardelete {
-    align-self: center
+    text-align: center;
 }
 
 .container {
     display: grid;
-    align-self: center;
     grid-template-columns: repeat(4, 1fr);
     grid-gap: 10px;
 }
 
-.btn {
+.btn,
+.btn-op,
+.btn-eq {
     width: 50px;
+    border: none;
+    border-radius: 5px;
+    height: 20px;
+    font-weight: bold;
+    background-color: rgb(239, 255, 208);
+    font-size: 15px;
+    cursor: pointer;
+}
+
+.btn-clear,
+.btn-delete {
+    cursor: pointer;
+    border: none;
+    border-radius: 5px;
+    height: 30px;
+    width: 115px;
+    font-weight: bold;
+    font-size: 15px;
+}
+
+.btn-clear {
+    background-color: rgb(165, 82, 82);
+}
+
+.btn-delete {
+    background-color: rgb(153, 101, 155);
 }
