--- a/style.css
+++ b/style.css
@@ -1,34 +1,44 @@
 body {
     display: flex;
-    justify-content: center;
+    align-items: center;
+    margin-top: 300px;
+    flex-direction: column;
     font-family: 'Pacifico', sans-serif;
+    background-size: 100% 100vh;
+    background-repeat: no-repeat;
+    background-image: url("https://images.unsplash.com/photo-1554034483-04fda0d3507b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80");
 }
-
 
 
 .calculator {
     display: flex;
     flex-direction: column;
     gap: 10px;
-    border-radius: 20px;
     box-shadow: 0px 0px 15px;
     padding: 20px;
     backdrop-filter: blur(10px);
-    background-color: rgb(206, 206, 206);
+    background-color: rgba(206, 206, 206, 0);
 }
 
 .screen {
     display: flex;
-    background-color: rgba(100, 100, 100, 0.5);
+    background-color: rgba(100, 100, 100, 0.185);
     width: 230px;
     height: 50px;
     justify-content: center;
     align-items: center;
     border-style: solid;
-    border-radius: 10px;
-    border-color: white;
+    border-color: rgba(255, 255, 255, 0.411);
     border-width: 2px;
     font-size: 30px;
+}
+
+.currentresult {
+    position: absolute;
+    margin-left: 5px;
+    margin-top: 65px;
+    color: rgb(174, 0, 255);
+    font-size: 15px;
 }
 
 .previous {
@@ -37,8 +47,7 @@ body {
     align-items: center;
     justify-content: center;
     font-size: 20px;
-    border-radius: 20px;
-    background-color: rgb(241, 255, 215);
+    background-color: rgba(241, 255, 215, 0.205);
 }
 
 .cleardelete {
@@ -57,11 +66,12 @@ body {
     width: 50px;
     border: none;
     border-radius: 5px;
-    height: 20px;
+    height: 25px;
     font-weight: bold;
-    background-color: rgb(239, 255, 208);
+    background-color: rgba(255, 255, 255, 0.692);
     font-size: 15px;
     cursor: pointer;
+
 }
 
 .btn-clear,
@@ -73,12 +83,34 @@ body {
     width: 115px;
     font-weight: bold;
     font-size: 15px;
+
 }
 
 .btn-clear {
-    background-color: rgb(165, 82, 82);
+    background-color: rgba(219, 90, 90, 0.445);
 }
 
 .btn-delete {
-    background-color: rgb(153, 101, 155);
+    background-color: rgba(153, 101, 155, 0.623);
+}
+
+.btn:active {
+    transform: scale(0.9);
+}
+
+.btn-op:active {
+    transform: scale(0.9);
+    background-color: green;
+}
+
+.btn-clear:active {
+    background-color: rgb(255, 89, 89);
+}
+
+.btn-delete:active {
+    background-color: rgb(161, 99, 219);
+}
+
+.btn-eq:active {
+    background-color: gold;
 }
